--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,83 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'assets/sass/normalize';
+
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+
+body {
+  background-color: #ECEFF1;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  max-width: 60rem;
+  margin: auto;
+  padding: 0 8px;
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+  overflow: hidden;
+  background-color: #CFD8DC;
+}
+
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #000000;
+  font-size: 10px;
+  margin: 80px auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
